#

Version 2.1 ()
------------------------------------------------------------------------

    * Fix: the syndication plugin now always uses absolute links for
           the subtome-button

    * Fix: the syndication plugin links subtome correctly to the atom
           feed when he is activated with the rss feed

    * Issue #285: Add "none" as possible value for the xml-icon in
                  the syndication plugin, to enable plain links 

   * Issue #238: When creating/renaming media directories, replace
     special characters with the same i18n rules like Permalinks are
     created, renaming umlauts etc.

    * Add "update all"-button to plugin update page

   * Issue #234: Granular options to force backend popups for certain
     areas

    * Introduce serendipity['ajax'] to detect incoming ajax requests
      and react accordingly in core and plugins

   * Issue #248: Add $serendipity['forceBase64']=true option (can be set
     in serendipity_config_local.inc.php) to make Serendipity *not*
     use 8bit Imap functions for sending mail, for MTAs that behave
     erradically otherwise.

   * Issue #257: Make sure to check entered admin-user password

   * Issue #264: Drop $authorid for permissions based on images
     instead of directories, it was not used anymore

   * Some small enhancements to the error reporting

Version 2.0.1 ()
------------------------------------------------------------------------

   * Improved detection for possible upgrade/plugin/PHP errors. A
     warning will be emitted on the dashboard, when the Serendipity
     JavaScript-library could not be loaded.
     
   * syndication fix: use absolute urls for subtome
   
   * Issue 306: localStorage may be deactivated by setting a config
     option or using security-related extensions at least in some
     browsers, which might (at least in FF) break backend JS
     functionality. Added extra tests to 2k11 backend JS.
